[package]
name = "lazor"
description = "A ray tracer for WebAssembly"
version = "0.1.1"
authors = ["patrickp89 <patrickpreuss@netherspace.de>"]
license-file = "LICENSE"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "^0.2.67"
console_error_panic_hook = { version = "^0.1.6", optional = true }
wee_alloc = { version = "^0.4.5", optional = true }

[dependencies.web-sys]
version = "^0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'ImageData',
]

[dev-dependencies]
wasm-bindgen-test = "^0.3.17"

[profile.release]
opt-level = "s"
